--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                 <img src="/images/icons/give-classes.svg" alt="Dar aulas"> Dar aulas
             </a>
         </div>
+        <p class="total-connections">
+            Total de 200 conexões ja realizadas
+            <img src="/images/icons/purple-heart.svg" alt="Coração roxo">
+        </p>
 
     </div>
 
